Issue #3055598 by quiron, fhaeberle, rafuel92, lauriii, mherchel: Exposed filters eat up too much vertical space on admin/content view

--- a/css/src/components/fieldset.css
+++ b/css/src/components/fieldset.css
@@ -117,7 +117,7 @@ _:-ms-fullscreen,
 
 @media screen and (min-width: 48em) {
   .fieldset__wrapper {
-    margin: 0 var(--space-l) calc(var(--space-m) + var(--space-s));
+    margin: 0 var(--space-l);
   }
 }
 
